dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/avinfo.c)
AM_INIT_AUTOMAKE(avinfo, 1.0.a16)
AC_PROG_CC
AC_CHECK_PROG(BISON, bison, bison, NONE)
AM_CONDITIONAL(NOBISON, test x$BISON = xNONE)
AC_STDC_HEADERS
AC_HAVE_HEADERS(ctype.h assert.h limits.h time.h)
AC_OUTPUT(Makefile src/Makefile)
