dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(src/avinfo.c)
AM_INIT_AUTOMAKE(avinfo, 1.0.a16)
AM_CONFIG_HEADER(config.h)

dnl Checks for system type
AC_CANONICAL_HOST
case $host_os in
     msdos* | go32* | mingw32* | cygwin* | windows*)
	 AC_DEFINE(CFG_PATH_STYLE_WINDOWS, 1, [See src/config.h])
         ;;
       *)
         AC_DEFINE(CFG_PATH_STYLE_UNIX, 1, [See src/config.h])
         ;;
esac

dnl Checks for progs
AC_PROG_CC
AC_CHECK_PROG(BISON, bison, bison, NONE)
AM_CONDITIONAL(NOBISON, test x$BISON = xNONE)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h stddef.h stdlib.h string.h unistd.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([memmove memset strcasecmp strdup])

AC_OUTPUT([Makefile src/Makefile])
